arquivo .properties alterado para prod

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ api.security.token.secret=${JWT_SECRET:my-secret-key}
 
 
 # PERFIL ATIVO
-spring.profiles.active=${APP_PROFILE:dev}
+spring.profiles.active=${APP_PROFILE:prod}
 
 
 #SQL
