--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,7 @@
 springdoc.api-docs.path=/docs/api
 springdoc.swagger-ui.path=/docs/swagger-ui
 
+spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
